# C_projects

s21_3DViewer_v1.0/src/Viewer/: .gitignore  Makefile  Viewer.pro  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
s21_3DViewer_v1.0/src/Viewer/c_libs/: parse.h  s21_parse.c
s21_3DViewer_v1.0/src/Viewer/c_libs/test/: s21_test.c
s21_SmartCalc_v1.0/src/: Makefile  dvi.txt  main.c
s21_SmartCalc_v1.0/src/Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui
s21_SmartCalc_v1.0/src/lib/: Makefile  calculate.c  polish_notation.c  polish_notation.h  stack.c
s21_SmartCalc_v1.0/src/test/: s21_test.c
s21_decimal/src/: Makefile  s21_another.c  s21_arithmetic.c  s21_compare.c  s21_decimal.h  s21_decimal_test.c  s21_float.c  s21_help.c  s21_help_sup_decimal.c  s21_int.c  s21_sup_arithmetic.c  s21_sup_compare.c
